tests/fail/builtin_open--NameError.py
"""'open' should not be in the built-in namespace."""
_  = open
